[gd_scene load_steps=111 format=2]

[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0009.png" type="Texture" id=1]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0010.png" type="Texture" id=2]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0012.png" type="Texture" id=3]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0014.png" type="Texture" id=4]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0015.png" type="Texture" id=5]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0000.png" type="Texture" id=6]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0004.png" type="Texture" id=7]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0005.png" type="Texture" id=8]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0013.png" type="Texture" id=9]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0006.png" type="Texture" id=10]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0002.png" type="Texture" id=11]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0011.png" type="Texture" id=12]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0007.png" type="Texture" id=13]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0001.png" type="Texture" id=14]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0003.png" type="Texture" id=15]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0008.png" type="Texture" id=16]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/JumpHigh/0023.png" type="Texture" id=17]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0018.png" type="Texture" id=18]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0017.png" type="Texture" id=19]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0020.png" type="Texture" id=20]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0016.png" type="Texture" id=21]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0021.png" type="Texture" id=22]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0022.png" type="Texture" id=23]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Run/0019.png" type="Texture" id=24]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/JumpMid/0024.png" type="Texture" id=25]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Blue/Slide/0025.png" type="Texture" id=26]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0004.png" type="Texture" id=27]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0005.png" type="Texture" id=28]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0000.png" type="Texture" id=29]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Slide/0025.png" type="Texture" id=30]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0003.png" type="Texture" id=31]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0001.png" type="Texture" id=32]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0002.png" type="Texture" id=33]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0006.png" type="Texture" id=34]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0012.png" type="Texture" id=35]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0013.png" type="Texture" id=36]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0021.png" type="Texture" id=37]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0008.png" type="Texture" id=38]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0010.png" type="Texture" id=39]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0007.png" type="Texture" id=40]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0009.png" type="Texture" id=41]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0015.png" type="Texture" id=42]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0018.png" type="Texture" id=43]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0020.png" type="Texture" id=44]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0016.png" type="Texture" id=45]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0022.png" type="Texture" id=46]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0014.png" type="Texture" id=47]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0011.png" type="Texture" id=48]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0017.png" type="Texture" id=49]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/Run/0019.png" type="Texture" id=50]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/JumpMid/0024.png" type="Texture" id=51]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Red/JumpHigh/0023.png" type="Texture" id=52]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0015.png" type="Texture" id=53]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0009.png" type="Texture" id=54]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0010.png" type="Texture" id=55]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0003.png" type="Texture" id=56]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0000.png" type="Texture" id=57]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0001.png" type="Texture" id=58]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0008.png" type="Texture" id=59]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0011.png" type="Texture" id=60]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0012.png" type="Texture" id=61]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0002.png" type="Texture" id=62]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0005.png" type="Texture" id=63]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0007.png" type="Texture" id=64]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0004.png" type="Texture" id=65]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0006.png" type="Texture" id=66]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0013.png" type="Texture" id=67]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0014.png" type="Texture" id=68]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0016.png" type="Texture" id=69]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Slide/0025.png" type="Texture" id=70]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/JumpHigh/0023.png" type="Texture" id=71]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0021.png" type="Texture" id=72]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0022.png" type="Texture" id=73]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0017.png" type="Texture" id=74]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/JumpMid/0024.png" type="Texture" id=75]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0018.png" type="Texture" id=76]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0020.png" type="Texture" id=77]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Green/Run/0019.png" type="Texture" id=78]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0008.png" type="Texture" id=79]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0012.png" type="Texture" id=80]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0016.png" type="Texture" id=81]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0017.png" type="Texture" id=82]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0004.png" type="Texture" id=83]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0018.png" type="Texture" id=84]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0020.png" type="Texture" id=85]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0010.png" type="Texture" id=86]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0014.png" type="Texture" id=87]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0009.png" type="Texture" id=88]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0007.png" type="Texture" id=89]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0015.png" type="Texture" id=90]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0019.png" type="Texture" id=91]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0006.png" type="Texture" id=92]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0011.png" type="Texture" id=93]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0013.png" type="Texture" id=94]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0005.png" type="Texture" id=95]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Slide/0025.png" type="Texture" id=96]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/JumpMid/0024.png" type="Texture" id=97]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/JumpHigh/0023.png" type="Texture" id=98]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0000.png" type="Texture" id=99]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0001.png" type="Texture" id=100]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0002.png" type="Texture" id=101]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0003.png" type="Texture" id=102]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0022.png" type="Texture" id=103]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Purple/Run/0021.png" type="Texture" id=104]
[ext_resource path="res://_ProjectFiles/Game Objects/Player/Player.gd" type="Script" id=105]

[sub_resource type="CapsuleShape2D" id=6]
radius = 85.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 26 ) ],
"loop": false,
"name": "slide",
"speed": 1.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": false,
"name": "jump_high",
"speed": 1.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 12 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "run",
"speed": 30.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": false,
"name": "jump_mid",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 70 ) ],
"loop": false,
"name": "slide",
"speed": 1.0
}, {
"frames": [ ExtResource( 71 ) ],
"loop": false,
"name": "jump_high",
"speed": 1.0
}, {
"frames": [ ExtResource( 57 ), ExtResource( 58 ), ExtResource( 62 ), ExtResource( 56 ), ExtResource( 65 ), ExtResource( 63 ), ExtResource( 66 ), ExtResource( 64 ), ExtResource( 59 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 53 ), ExtResource( 69 ), ExtResource( 74 ), ExtResource( 76 ), ExtResource( 78 ), ExtResource( 77 ), ExtResource( 72 ), ExtResource( 73 ) ],
"loop": true,
"name": "run",
"speed": 30.0
}, {
"frames": [ ExtResource( 75 ) ],
"loop": false,
"name": "jump_mid",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 30 ) ],
"loop": false,
"name": "slide",
"speed": 1.0
}, {
"frames": [ ExtResource( 52 ) ],
"loop": false,
"name": "jump_high",
"speed": 1.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 31 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 34 ), ExtResource( 40 ), ExtResource( 38 ), ExtResource( 41 ), ExtResource( 39 ), ExtResource( 48 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 47 ), ExtResource( 42 ), ExtResource( 45 ), ExtResource( 49 ), ExtResource( 43 ), ExtResource( 50 ), ExtResource( 44 ), ExtResource( 37 ), ExtResource( 46 ) ],
"loop": true,
"name": "run",
"speed": 30.0
}, {
"frames": [ ExtResource( 51 ) ],
"loop": false,
"name": "jump_mid",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 96 ) ],
"loop": false,
"name": "slide",
"speed": 1.0
}, {
"frames": [ ExtResource( 98 ) ],
"loop": false,
"name": "jump_high",
"speed": 1.0
}, {
"frames": [ ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 83 ), ExtResource( 95 ), ExtResource( 92 ), ExtResource( 89 ), ExtResource( 79 ), ExtResource( 88 ), ExtResource( 86 ), ExtResource( 93 ), ExtResource( 80 ), ExtResource( 94 ), ExtResource( 87 ), ExtResource( 90 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 84 ), ExtResource( 91 ), ExtResource( 85 ), ExtResource( 104 ), ExtResource( 103 ) ],
"loop": true,
"name": "run",
"speed": 30.0
}, {
"frames": [ ExtResource( 97 ) ],
"loop": false,
"name": "jump_mid",
"speed": 1.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 105 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="SpriteColors" type="Node2D" parent="."]

[node name="Blue" type="AnimatedSprite" parent="SpriteColors"]
frames = SubResource( 2 )
animation = "run"
frame = 22

[node name="Green" type="AnimatedSprite" parent="SpriteColors"]
visible = false
frames = SubResource( 4 )
animation = "run"
frame = 5

[node name="Red" type="AnimatedSprite" parent="SpriteColors"]
visible = false
frames = SubResource( 3 )
animation = "run"
frame = 20

[node name="Purple" type="AnimatedSprite" parent="SpriteColors"]
visible = false
frames = SubResource( 5 )
animation = "run"
frame = 10

[connection signal="animation_finished" from="SpriteColors/Blue" to="." method="_on_Blue_animation_finished"]
[connection signal="animation_finished" from="SpriteColors/Green" to="." method="_on_Green_animation_finished"]
[connection signal="animation_finished" from="SpriteColors/Red" to="." method="_on_Red_animation_finished"]
[connection signal="animation_finished" from="SpriteColors/Purple" to="." method="_on_Purple_animation_finished"]
